[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "wanptek-controller"
dynamic = ["version"]
description = "Desktop controller for Wanptek DC power supplies via USB/serial (Modbus RTU)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["wanptek", "power-supply", "modbus", "serial", "instrument-control"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "crcmod>=1.7",
    "customtkinter>=5.2.2",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pillow>=10.0",
    "pygame>=2.6",
    "pymodbus>=3.8",
    "pyserial>=3.5",
    "tkdial>=0.0.7",
]

[project.scripts]
wanptek-controller = "wanptek_controller.main:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["wanptek_controller"]
